Added data context - FlowerServiceContext

--- a/Practice_6/FlowerService/appsettings.json
+++ b/Practice_6/FlowerService/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "FlowerServiceConnection": "Server=(localdb)\\mssqllocaldb;Database=FlowerServiceDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
